<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/scan_settings" >
        <EditTextPreference
            android:key="@string/pref_scantime"
            android:defaultValue="@integer/default_scantime"
            android:summary="@string/scan_time_summary"
            android:inputType="number"
            android:maxLength="9"
            android:title="@string/scan_time" />
        
        <EditTextPreference
            android:key="@string/pref_pausetime"
            android:defaultValue="@integer/default_pausetime"
            android:summary="@string/pause_time_summary"
            android:inputType="number"
            android:maxLength="9"
            android:title="@string/pause_time" />
    </PreferenceCategory>

</PreferenceScreen>